crates/nash-can/tests/snapshots/kinds__map_requires_storable_value.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias invalid = map int (int -> int)\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Storable` in the lowercase name of alias `invalid`:
   ╭─[src/Main.nash:6:31]
 5 │ 
 6 │ type alias invalid = map int (int -> int)
   ·                               ──────────
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
